Phase 90 (R2.5): two analysers in CI, and every finding triaged rather than silenced
Roadmap R2.5 asked for static analysis in CI with findings *triaged*, not silenced. This adds the two analysers and
the triage record behind them.

What runs, and where. SpotBugs 4.8.6 (Gradle plugin 6.0.26, effort MAX, confidence LOW) reads the compiled
bytecode of main *and* test sources; PMD 7.7.0 reads the source of both. Neither is wired into `test`, so the fast
loop and the full suite keep their pace; `./gradlew :core:ciStaticAnalysis` runs all four reports, the core workflow
runs it next to the tests, and both HTML reports are uploaded as an artifact on failure.

The triage. First pass: 306 PMD and 171 SpotBugs findings in main, 3,198 and 7 in test. Roughly fifty were real and
are fixed in code -- a dead `nodesToApply` budget and a dead distance store, a `keySet()`+`get()` loop
(`WMI_WRONG_MAP_ITERATOR`), `% 2 == 1` for odd (`IM_BAD_CHECK_FOR_ODD`), an integer division cast to float, a
`volatile long` incremented from the input callback, `toUpperCase()` without a locale, a hand-rounded `6.2831f`
circle, ten `catch (NullPointerException)` parses that now check for `null` explicitly, two uncalled private
methods, a write-only feedback id and the parameter that fed it, a duplicated `secondTreePlanted` sync, four
repeated string literals that became constants, two identical switch branches, `EnumSet`/`TreeSet` in signatures
that became `Set`, a `continue` as the last statement of a loop body, an unclosed renderer in `UiFrameRendererTest`
(now try-with-resources), two float loop indices, and a helper that returned `null` for an unreadable PNG header
instead of an empty array.

Every remaining finding class is excluded *with the reason written where it is excluded*: the accessor naming
convention, inline gameplay thresholds, reference releases, record compact constructors, deliberate identity
comparisons, per-frame renderer allocations, and on the SpotBugs side the public simulatio